fix header align

--- a/desafio-02/styles/style.css
+++ b/desafio-02/styles/style.css
@@ -9,11 +9,14 @@ ul {
 .header {
 	background: gold;
 	margin: 0 auto;
+	padding: 10px 0;
 }
 
 .header-container {
 	width: max-content;
 	margin: 0 auto;
+	display: flex;
+	align-items: center;
 }
 
 .header-element {
